# cache-simulator

./: .gitignore  CMakeLists.txt  build  build-release  run-all-experiments.rb  run-multi.rb  save-setup.rb  todo.txt
actors/: CMakeLists.txt  activity.cpp  activity.hpp  activity_manager.cpp  activity_manager.hpp  actor_system.cpp  actor_system.hpp  simulated_actor.cpp  simulated_actor.hpp
config/: CMakeLists.txt  alg_specific_config.hpp  client_spec.hpp  sim_config.cpp  sim_config.hpp
distribution-sketches/exponential_poffspring/: exponential_poffspring.pde
distribution-sketches/preferential_choice/: preferential_choice.pde
doc/: clients.txt  findings.txt  todo.txt
experiments/: default_options.json  trivial.json  verbose.json
experiments/full-set/: mix-dumb.json  mix-heavy-dumb.json  mix-heavy.json  mix.json  random.json  synthetic-dumb.json  synthetic-heavy-dumb.json  synthetic-heavy.json  synthetic.json
include/: types.hpp
kcache/: CMakeLists.txt  cache_client_activity.cpp  cache_client_activity.hpp  cache_node_activity.cpp  cache_node_activity.hpp  kademlia_config.hpp  kademlia_global_state.cpp  kademlia_global_state.hpp  kademlia_routing_table.cpp  kademlia_routing_table.hpp  kademlia_types.hpp  kcache_client.cpp  kcache_client.hpp  kcache_config.cpp  kcache_config.hpp  kcache_global_state.cpp  kcache_global_state.hpp  kclient.cpp  kclient.hpp  knode.cpp  knode.hpp
kcache/kademlia/: kademlia_activity.cpp  kademlia_activity.hpp  kademlia_global_state.cpp  kademlia_global_state.hpp  kademlia_routing_table.cpp  kademlia_routing_table.hpp  kademlia_types.hpp
log/: CMakeLists.txt  log.cpp  log.hpp
models/: CMakeLists.txt  client_model.cpp  client_model.hpp  client_type.hpp  client_work_spec.hpp  latency_model.cpp  latency_model.hpp  location_model.cpp  location_model.hpp
models/client_models/: eve_client_type.cpp  eve_client_type.hpp  fortnite_client_type.cpp  fortnite_client_type.hpp  fortnite_region_client_type.cpp  fortnite_region_client_type.hpp  fortnite_session_client_type.cpp  fortnite_session_client_type.hpp  matchmaking_lobby_client_type.cpp  matchmaking_lobby_client_type.hpp  random_client_type.cpp  random_client_type.hpp  region_model.cpp  region_model.hpp  weather_client_type.cpp  weather_client_type.hpp
options/: CMakeLists.txt  options.cpp  options.hpp
proto/: CMakeLists.txt  actors.proto  cache_finding.proto  cache_request.proto  kcache.proto
random/: CMakeLists.txt  random.cpp  random.hpp
sim/: CMakeLists.txt  main.cpp  sim.cpp  simulation.cpp  simulation.hpp
stats/: CMakeLists.txt  collection_stat.hpp  frequency_counter.cpp  frequency_counter.hpp  set_frequency_counter.cpp  set_frequency_counter.hpp  statistic.cpp  statistic.hpp  statistic_set.cpp  statistic_set.hpp  stats.cpp  stats.hpp  xy_plot_statistic.cpp  xy_plot_statistic.hpp
